# GameActivityPureDemo

./: gradle.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  NativeEngine.cpp  NativeEngine.h  SceneManager.cpp  SceneManager.h  UiScene.cpp  UiScene.h  main.cpp
app/src/main/java/com/cocos/gameactivitydemo/: MyActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
